--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
-PORT=4000
+PORT=5000
+DEV_MODE=development
+url=mongodb+srv://gpvishwas1687:hZWWhBKUAFLK0gv5@leetcodeclone.dr6xi2c.mongodb.net/
+JWT_TOKEN=nhfndsfandsanndsfon
