--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,4 @@ PORT=5000
 DEV_MODE=development
 url=mongodb+srv://gpvishwas1687:hZWWhBKUAFLK0gv5@leetcodeclone.dr6xi2c.mongodb.net/
 JWT_TOKEN=nhfndsfandsanndsfon
-FRONTEND_URL=3000
+FRONTEND_URL=http://localhost:3000
