--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "antd": "^5.10.0",
     "axios": "^1.5.1",
     "modal": "^1.2.0",
+    "primereact": "^10.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-split": "^2.0.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
