--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-split": "^2.0.14",
+    "react-split-grid": "^1.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
