--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.7",
     "react-split": "^2.0.14",
     "react-split-grid": "^1.0.4",
     "web-vitals": "^2.1.4"
