--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.13.8",
     "react-split": "^2.0.14",
     "react-split-grid": "^1.0.4",
     "web-vitals": "^2.1.4"
