--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@uiw/react-codemirror": "^4.21.20",
     "antd": "^5.10.0",
     "axios": "^1.5.1",
+    "babel-preset-react-app": "^10.0.1",
     "modal": "^1.2.0",
     "primereact": "^10.0.3",
     "react": "^18.2.0",
